...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entrants_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/send_notification_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrants_count_text"
        tools:listitem="@layout/item_entrant" />

    <ProgressBar
...
