...
            app:destination="@id/entrantMapFragment" />
        <action
            android:id="@+id/action_organizerEventPageFragment_to_runDrawFragment"
            app:destination="@id/runDrawFragment"/>
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantListFragment"
            app:destination="@id/entrantListFragment" />

        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

...
