...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_notify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
    <Button
        android:id="@+id/btn_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete_user"
        android:layout_width="match_parent"
...
