<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="User Id"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cancelButton"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="Cancel"
        android:textSize="15sp"
        android:background="@drawable/rounded_button_red"
        android:textColor="#FFFFFF"
        tools:ignore="HardcodedText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>